--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "react-scripts": "0.8.5"
   },
   "dependencies": {
+    "gsap": "^1.19.1",
     "pusher-js": "^4.0.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2"
